@@ -24,6 +24,8 @@ required for firebird, not a bad idea for others [ticket:408]
 - default "timezone" setting is now False.  this corresponds to Python's datetime
 behavior as well as Postgres' timestamp/time types (which is the only timezone-sensitive
 dialect at the moment) [ticket:414]
+- added an error message if you actually try to modify primary key values on an entity
+and then flush it.  
 
 0.3.3
 - string-based FROM clauses fixed, i.e. select(..., from_obj=["sometext"])
